[package]
name = "lander"
version = "0.1.0"
authors = ["Eric McCreath <ericm@cs.anu.edu.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "*"
rand = "0.8.0"
find_folder = "*"
freetype-rs = "0.27.0"